<resources>
    <string name="app_name">\u2022list</string>
    <string name="version">\u2022list version %1$s</string>
    <string name="mail">Select a mail service:</string>
    <!-- ГЛАВНАЯ ПАНЕЛЬ ИНСТРУМЕНТОВ -->
    <string name="menu_desc">The main menu of the application</string>

    <!-- МАЛАЯ ПАНЕЛЬ ИНСТРУМЕНТОВ -->
    <string name="root_dir">R:</string>
    <string name="ic_strings">\u2CB7</string>
    <string name="symb_sum">\u01A9</string>

    <!-- КОНТЕКСТНОЕ МЕНЮ ФОРМАТ -->
    <!-- Кнопки форматирования текста -->
    <string name="btn_format_color_text">T</string>
    <string name="btn_format_style_text_b">B</string>
    <string name="btn_format_style_text_i">I</string>
    <string name="btn_format_style_text_bi">BI</string>
    <string name="btn_format_style_text_u"><u>U</u></string>

    <string name="hint_btn_format_color">Font color</string>
    <string name="hint_btn_format_style_b">Bold</string>
    <string name="hint_btn_format_style_i">Italic</string>
    <string name="hint_btn_format_style_bi">Bold+Italic</string>
    <string name="hint_btn_format_style_u">Underlined</string>
    <string name="btn_back_text">Restores default font parameters</string>

    <!-- КОНТЕКСТНОЕ МЕНЮ ПЕРЕМЕЩЕНИЕ -->
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="back">Cancel</string>

    <!-- БОКОВАЯ ПАНЕЛЬ ИНСТРУМЕНТОВ -->
    <string name="side_bar_open">Collapse</string>
    <string name="side_bar_send">Send list</string>
    <string name="side_bar_convert_text">Convert text\n to list</string>
    <string name="side_bar_no_sleep">NO SLEEP MODE</string>
    <string name="side_bar_del_mark">Delete \u0020\u0020\u2713</string>
    <string name="side_bar_del_mode">Delete multiple\nrecords</string>
    <string name="side_bar_rest_mode">Restore deleted\nrecords</string>
    <string name="side_bar_move_mode">Move/copy\nrecords</string>
    <string name="side_bar_archive_mode">Archive management</string>

    <string name="del_mark_text">\u2713 of all records in the current folder will be deleted</string>
    <string name="no_marks">No \u2713 in the current folder</string>

    <!-- ПАНЕЛЬ ИНСТРУМЕНТОВ РЕЖИМЫ -->
    <string name="mode_hint">This mode applies only to the current folder</string>
    <string name="select_all">Select all</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="recursion_error">Operation rejected!\nAttempting to INSERT a folder into itself or into a nested folder leads to recursion or a circular reference.</string>
    <string name="ok">OK</string>

    <!-- НАСТРОЙКИ -->
    <string name="settings">SETTINGS</string>
    <string name="theme"><u>Theme</u></string>
    <string name="light_theme"><b>Always light theme</b></string>
    <string name="dark_theme"><b>Always dark theme</b></string>
    <string name="system_theme"><b>System theme</b>\n<font size="14">changes according to phone settings</font></string>
    <string name="edit"><u>Editing</u></string>
    <string name="text_size">Font size</string>
    <string name="edit_empty_dir">when opening an empty folder, editing a new line starts</string>
    <string name="sort_title"><u>Completion mark</u></string>
    <string name="sort_text">after setting \u2713, the entry moves to the bottom of the list</string>
    <string name="strike_text">after setting \u2713, the main field text is struck through</string>
    <string name="restore_period"><u>Restore period</u></string>
    <string name="restore_period_text">storage period for deleted entries (1–7 days). After this period expires, restoration becomes impossible.</string>
    <string name="notifications"><u>Reminders</u></string>
    <string name="show_notification">show notification when reminder time arrives</string>
    <string name="special_features"><u>Special features</u></string>
    <string name="left_hand_control">In which hand is it more convenient for you to hold the phone</string>

    <string name="record_hint">New line</string>
    <string name="note_hint">1</string>

    <string name="text_exit">Press again to exit</string>

    <string name="del_attempt">Attempt to delete records: %1$s.\nAlso, nested records will be deleted: %2$s</string>
    <string name="del_archive">,\nincluding archived folders: %1$s</string>
    <string name="negative_btn">Cancel</string>

    <string name="rest_attempt">Attempt to restore records: %1$s</string>
    <string name="rest_subordinate">.\nAlso, nested records will be restored: %1$s</string>

    <string name="title_conversion">Conversion</string>
    <string name="title_send">Share</string>
    <string name="convert_text_hint">Enter or paste the text you want to convert to a list</string>
    <string name="convert_text_hint2">New lines will be added to the <font color='#eabf11'><b><u>current folder</u></b></font></string>
    <string name="btn_send_text">Send</string>
    <string name="btn_convert_text">Convert</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="send_text_empty">No text to send</string>
    <string name="convert_text_empty">No text to convert</string>
    <string name="mail_service">Select mail service:</string>
    <string name="dir_empty">Nothing to send.\nFolder is empty!</string>

    <string name="description">App description</string>
    <string name="set_string">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Write to support</string>
    <string name="like_string">If you liked <font color='#4eb6ff'><b>\u2022list</b></font></string>

    <string name="qr_description">Show QR code</string>
    <string name="your_feedback">Please give your feedback about the app</string>
    <string name="for_friends">Send weblink to the <font color='#4eb6ff'><b>\u2022list</b></font> page to your friends</string>
    <string name="recommend">I recommend\n</string>
    <string name="for_friends2">or ask them to scan the QR-code</string>

    <string name="notification">Reminder</string>
    <string name="notifi_hint">Enter a brief reminder text,\nset date and time</string>
    <string name="notifi_name_hint">Reminder text</string>
    <string name="notifi_date_hint">Date</string>
    <string name="notifi_time_hint">Time</string>
    <string name="notifi_save">Save</string>

    <string name="date_time_err">Reminder time must be at least a couple of minutes ahead of current time</string>
    <string name="now">Now:   %1$s</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="text_err">Reminder text cannot be empty</string>
    <string name="notifi_title">You asked to remind:</string>
    <string name="ban_notifications">You will not receive reminder notifications</string>

    <string name="first_launch_message">Familiarize yourself with all app features.\nLater, you can open the app description in the menu on the top toolbar.\nOpen description?</string>
    <string name="first_launch_positive_button">Yes</string>
    <string name="first_launch_neutral_button">Not now</string>

    <string name="zoom">ZOOM</string>

    <!-- ВЫБОР МЕДИАФАЙЛА -->

    <string name="select">Select</string>
    <string name="out_of_memory">Not enough space to copy</string>
    <string name="file_exists_in_galery">A file with this name already exists in the Gallery.</string>
    <string name="copy_error">File copy error</string>
    <string name="unexpected_error">Unexpected error while copying</string>
    <string name="access_media_denied">Access to media files is denied. Please allow it in the app settings.</string>
    <string name="access_camera_denied">Access to camera denied. Please allow it in the app settings.</string>
    <string name="photo_hint">photo</string>
    <string name="today">today</string>
    <string name="no_file_selected">No file selected</string>
    <string name="gallery">Gallery</string>
    <string name="dialog_hint">There are already copies of a file with this name in \u2022list.\nDo you want to use the existing copy (recommended) or create a new one?</string>
    <string name="existing_copy">Existing copies</string>
    <string name="new_copy">New copy</string>
    <string name="copy_dialog_hint">There is no file with this name in the Gallery.\nCopy it to the Gallery?</string>
    <string name="file_not_saved">File not saved. Try again.</string>

    <!-- ПРОСМОТР МЕДИАФАЙЛА -->
    <string name="send_message">Send message</string>
    <string name="send_message_error">Failed to send message</string>
    <string name="file_not_found">File not found</string>
    <string name="error_loading_file">Error loading file</string>
</resources>