<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/likeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorBar"
    android:scrollbarThumbVertical="@color/blue_icon"
    tools:context="com.a2t.myapplication.main.ui.fragments.LikeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="80dp"
            android:contentDescription="@string/qr_description"
            android:src="@drawable/ic_mylist" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/yellow_dir"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tv_like"
        android:text="@string/your_feedback"
        app:drawableStartCompat="@drawable/ic_star"
        style="@style/TVLikeFragment"/>

    <TextView
        android:id="@+id/tv_send"
        android:text="@string/for_friends"
        app:drawableStartCompat="@drawable/ic_send"
        style="@style/TVLikeFragment"/>

    <TextView
        android:id="@+id/tv_qr"
        android:text="@string/for_friends2"
        app:drawableStartCompat="@drawable/ic_uri_app_qr"
        style="@style/TVLikeFragment"/>

    </LinearLayout>

</LinearLayout>