<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main_menu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/shadow"
    android:paddingStart="6dp"
    android:paddingBottom="6dp"
    android:focusableInTouchMode="true"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/floatinf_bar"
        android:padding="10dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/ic_launcher_foreground"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/yellow_dir"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="start"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_desc"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginBottom="4dp"
            android:text="@string/set_string"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_settings"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"/>






    </LinearLayout>

</LinearLayout>